Added test for the time nearest neighbor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,15 +74,17 @@ list(APPEND gos_cpp_library_public_header
   "${CMAKE_CURRENT_BINARY_DIR}/include/gos/version.h")
 list(APPEND gos_cpp_library_public_header
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/data.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/text.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/text.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/time.h"
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/line.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/types.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/scale.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/color.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/noise.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/types.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/scale.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/color.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/noise.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/range.h"
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/perlin.h"
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/signal.h"
-# "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/screen.h"
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/screen.h"
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/mapping.h"
   "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/nearest.h"
 # "${CMAKE_CURRENT_SOURCE_DIR}/include/gos/dynamic.h"
