Adding named colors (see https://www.w3schools.com/colors/colors_names.asp) and text check for hexadecimals

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ list(APPEND gos_cpp_library_source
 # screen.cpp
 # signal.cpp
 # noise.cpp
-# color.cpp
+  color.cpp
 # scale.cpp
   text.cpp)
 # data.cpp)
